Fixed overlapping with footer

--- a/horoscope.css
+++ b/horoscope.css
@@ -108,7 +108,7 @@ Horoscope Page Exclusive
   gap: 5%;
   flex-grow: 2;
   justify-content: center;
-  margin-bottom: 12%;
+  margin-bottom: 18%;
 }
 .suggestions >a{
   background-color: #000229;
